--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>E-com Gamis — Koleksi Muslimah Elegan</title>
-  <meta name="description" content="Toko online gamis & abaya elegan, warna krem lembut dan desain eksklusif.">
+  <meta name="description" content="Toko online gamis & abaya elegan dengan nuansa bunga dan warna krem lembut.">
   <style>
     :root {
       --cream-bg: #faf6f0;
@@ -94,13 +94,13 @@
       display: flex;
       align-items: center;
       gap: 40px;
-      background: var(--cream-card);
+      background: var(--cream-card) url('https://i.ibb.co/Pr6k4DC/floral-bg.jpg') no-repeat right bottom / cover;
       border-radius: var(--radius);
       box-shadow: var(--shadow);
       padding: 40px;
     }
     .hero h1 {
-      font-size: 32px;
+      font-size: 34px;
       color: var(--accent-dark);
       margin-bottom: 12px;
     }
@@ -117,6 +117,10 @@
       max-width: 800px;
       margin: 40px auto;
       color: var(--muted);
+      background: #fffaf2;
+      border-radius: var(--radius);
+      padding: 20px;
+      box-shadow: var(--shadow);
     }
 
     /* PRODUCT GRID */
@@ -171,39 +175,9 @@
       font-weight: 600;
     }
 
-    /* DRAWER */
-    .drawer {
-      position: fixed;
-      right: 20px;
-      top: 80px;
-      width: 360px;
-      max-width: 90%;
-      background: #fff;
-      border-radius: var(--radius);
-      box-shadow: 0 12px 40px rgba(0,0,0,0.15);
-      padding: 18px;
-      transform: translateX(120%);
-      transition: transform 0.3s ease-in-out;
-      z-index: 100;
-    }
-    .drawer.open { transform: translateX(0); }
-
-    .cart-item {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      padding: 10px 0;
-      border-bottom: 1px solid #f1f5f9;
-    }
-    .cart-item img {
-      width: 64px;
-      height: 64px;
-      object-fit: cover;
-      border-radius: 8px;
-    }
-
+    /* RESPONSIVE */
     @media (max-width: 768px) {
-      .hero { flex-direction: column; text-align: center; }
+      .hero { flex-direction: column; text-align: center; background-position: center; }
       .hero img { width: 80%; }
       header { flex-direction: column; gap: 10px; }
     }
@@ -224,16 +198,17 @@
   <section class="hero">
     <div class="text">
       <h1>Koleksi Gamis & Abaya Elegan</h1>
-      <p>Bahan premium, warna lembut, dan desain elegan untuk gaya muslimah modern.</p>
-      <button class="btn secondary" onclick="scrollToProducts()">Lihat Produk</button>
+      <p>Temukan koleksi gamis modern dengan sentuhan klasik — bahan lembut, warna pastel, dan nuansa feminin berpadu dalam harmoni keanggunan muslimah.</p>
+      <button class="btn secondary" onclick="scrollToProducts()">Lihat Koleksi</button>
     </div>
-    <img src="https://images.unsplash.com/photo-1603808033192-082d6919d9b8?auto=format&fit=crop&w=800&q=60" alt="Gamis elegan">
+    <img src="https://images.unsplash.com/photo-1624468313569-b3f17850b9be?auto=format&fit=crop&w=800&q=60" alt="Gamis elegan">
   </section>
 
   <div class="desc">
     <p>
-      <strong>E-com Gamis</strong> menghadirkan koleksi eksklusif gamis dan abaya dengan bahan pilihan, 
-      jahitan rapi, dan nuansa warna krem yang lembut. Tampil menawan dan anggun setiap hari.
+      <strong>E-com Gamis</strong> menghadirkan koleksi eksklusif gamis dan abaya dengan desain elegan,
+      memadukan kenyamanan dan keanggunan untuk setiap kesempatan. Didesain khusus bagi muslimah modern
+      yang ingin tampil lembut, anggun, dan berkelas.
     </p>
   </div>
 
@@ -253,31 +228,17 @@
     <p style="margin-top:10px;">© <span id="year"></span> E-com Gamis — Elegan dalam Setiap Gaya</p>
   </footer>
 
-  <aside id="drawer" class="drawer">
-    <h3 style="margin-bottom:12px;">Keranjang Belanja</h3>
-    <div id="cartList"></div>
-    <div style="margin-top:12px;display:flex;justify-content:space-between;align-items:center">
-      <div class="muted">Total:</div>
-      <div id="total" style="font-weight:700;color:var(--accent-dark)">Rp 0</div>
-    </div>
-    <div style="margin-top:12px;display:flex;gap:8px">
-      <button class="btn" id="checkoutBtn">Checkout</button>
-      <button class="btn secondary" id="closeDrawer">Tutup</button>
-    </div>
-  </aside>
-
   <script>
     const PRODUCTS = [
-      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'https://images.unsplash.com/photo-1603252109303-2751441dd157?auto=format&fit=crop&w=800&q=60'},
-      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'https://images.unsplash.com/photo-1542060748-10c28b62716c?auto=format&fit=crop&w=800&q=60'},
-      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'https://images.unsplash.com/photo-1558769132-cb1aea458c5e?auto=format&fit=crop&w=800&q=60'},
-      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'https://images.unsplash.com/photo-1544717302-de2939b7ef71?auto=format&fit=crop&w=800&q=60'},
-      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'https://images.unsplash.com/photo-1617137968427-85924c800a29?auto=format&fit=crop&w=800&q=60'},
-      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'https://images.unsplash.com/photo-1624468313569-b3f17850b9be?auto=format&fit=crop&w=800&q=60'}
+      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'https://i.ibb.co/ZBfCg4W/gamis1.jpg'},
+      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'https://i.ibb.co/Sxvy7J3/gamis2.jpg'},
+      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'https://i.ibb.co/vzJmWzH/gamis3.jpg'},
+      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'https://i.ibb.co/mtczH6V/gamis4.jpg'},
+      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'https://i.ibb.co/XZXtH7D/gamis5.jpg'},
+      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'https://i.ibb.co/nC2rj6n/gamis6.jpg'}
     ];
 
     let cart = {};
-
     const toRupiah = n => 'Rp ' + n.toString().replace(/\B(?=(\d{3})+(?!\d))/g, '.');
 
     const productsDiv = document.getElementById('products');
@@ -309,50 +270,20 @@
       updateCart();
     }
 
-    const drawer = document.getElementById('drawer');
+    const drawer = document.createElement('aside');
+    drawer.id = 'drawer';
+    drawer.style.display = 'none';
+
     const badge = document.getElementById('badge');
-    const cartList = document.getElementById('cartList');
-    const totalDiv = document.getElementById('total');
+    const totalDiv = document.createElement('div');
 
     function updateCart() {
-      let total = 0;
-      let qtyAll = 0;
-      cartList.innerHTML = '';
-      Object.values(cart).forEach(item => {
-        total += item.price * item.qty;
-        qtyAll += item.qty;
-        const div = document.createElement('div');
-        div.className = 'cart-item';
-        div.innerHTML = `
-          <img src="${item.img}">
-          <div style="flex:1">
-            <div style="font-weight:600">${item.name}</div>
-            <div class="muted" style="font-size:13px">${item.qty} × ${toRupiah(item.price)}</div>
-          </div>
-          <div class="qty">
-            <button class="btn secondary" style="padding:4px 8px" onclick="changeQty(${item.id},-1)">−</button>
-            <span>${item.qty}</span>
-            <button class="btn secondary" style="padding:4px 8px" onclick="changeQty(${item.id},1)">+</button>
-          </div>
-        `;
-        cartList.appendChild(div);
-      });
-      totalDiv.textContent = toRupiah(total);
+      let qtyAll = Object.values(cart).reduce((a,c)=>a+c.qty,0);
       badge.textContent = qtyAll;
       badge.style.display = qtyAll > 0 ? 'block' : 'none';
     }
 
-    function changeQty(id, delta) {
-      if (cart[id]) {
-        cart[id].qty += delta;
-        if (cart[id].qty <= 0) delete cart[id];
-        updateCart();
-      }
-    }
-
-    document.getElementById('openCart').onclick = () => drawer.classList.add('open');
-    document.getElementById('closeDrawer').onclick = () => drawer.classList.remove('open');
-    document.getElementById('checkoutBtn').onclick = () => alert('Fitur checkout belum aktif 🙂');
+    document.getElementById('openCart').onclick = () => alert('Fitur keranjang sedang diperbarui 🛍️');
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
