--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     .hero {
       max-width: 1200px;
       margin: 40px auto;
-      display: flex;
+      display: flex; m,.
       align-items: center;
       gap: 40px;
       background: var(--cream-card) url('https://i.ibb.co/Pr6k4DC/floral-bg.jpg') no-repeat right bottom / cover;
@@ -230,12 +230,12 @@
 
   <script>
     const PRODUCTS = [
-      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'https://i.ibb.co/ZBfCg4W/gamis1.jpg'},
-      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'https://i.ibb.co/Sxvy7J3/gamis2.jpg'},
-      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'https://i.ibb.co/vzJmWzH/gamis3.jpg'},
-      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'https://i.ibb.co/mtczH6V/gamis4.jpg'},
-      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'https://i.ibb.co/XZXtH7D/gamis5.jpg'},
-      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'https://i.ibb.co/nC2rj6n/gamis6.jpg'}
+      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'abaya.jpg'},
+      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'Gamis 3.jpg'},
+      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'gamis 4.jpg'},
+      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'gamis 6.jpg'},
+      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'Gamis aliyah.jpg'},
+      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'gamis fafa.jpg'}
     ];
 
     let cart = {};
