--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <p>Temukan koleksi gamis modern dengan sentuhan klasik — bahan lembut, warna pastel, dan nuansa feminin berpadu dalam harmoni keanggunan muslimah.</p>
       <button class="btn secondary" onclick="scrollToProducts()">Lihat Koleksi</button>
     </div>
-    <img src="https://images.unsplash.com/photo-1624468313569-b3f17850b9be?auto=format&fit=crop&w=800&q=60" alt="Gamis elegan">
+    <img src="kumpulan gamis/abaya.jpeg" alt="Gamis elegan">
   </section>
 
   <div class="desc">
