--- a/index.html
+++ b/index.html
@@ -230,12 +230,12 @@
 
   <script>
     const PRODUCTS = [
-      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'abaya.jpg'},
-      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'Gamis 3.jpg'},
-      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'gamis 4.jpg'},
-      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'gamis 6.jpg'},
-      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'Gamis aliyah.jpg'},
-      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'gamis fafa.jpg'}
+      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'abaya.jpeg'},
+      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'Gamis 3.jpeg'},
+      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'gamis 4.jpeg'},
+      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'gamis 6.jpeg'},
+      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'Gamis aliyah.jpeg'},
+      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'gamis fafa.jpeg'}
     ];
 
     let cart = {};
