--- a/index.html
+++ b/index.html
@@ -230,14 +230,13 @@
 
   <script>
     const PRODUCTS = [
-      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'abaya.jpeg'},
-      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'Gamis 3.jpeg'},
-      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'gamis 4.jpeg'},
-      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'gamis 6.jpeg'},
-      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'Gamis aliyah.jpeg'},
-      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'gamis fafa.jpeg'}
+      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'https://i.ibb.co/ZBfCg4W/gamis 3.jpeg'},
+      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'https://i.ibb.co/Sxvy7J3/gamis2.jpg'},
+      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'https://i.ibb.co/vzJmWzH/gamis3.jpg'},
+      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'https://i.ibb.co/mtczH6V/gamis4.jpg'},
+      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'https://i.ibb.co/XZXtH7D/gamis5.jpg'},
+      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'https://i.ibb.co/nC2rj6n/gamis6.jpg'}
     ];
-
     let cart = {};
     const toRupiah = n => 'Rp ' + n.toString().replace(/\B(?=(\d{3})+(?!\d))/g, '.');
 
