--- a/index.html
+++ b/index.html
@@ -230,12 +230,12 @@
 
   <script>
     const PRODUCTS = [
-      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'https://i.ibb.co/ZBfCg4W/gamis 3.jpeg'},
-      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'https://i.ibb.co/Sxvy7J3/Gamis aliyah.jpeg'},
-      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'https://i.ibb.co/vzJmWzH/abaya.jpeg'},
-      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'https://i.ibb.co/mtczH6V/gamis 4.jpeg'},
-      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'https://i.ibb.co/XZXtH7D/gamis 6.jpeg'},
-      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'https://i.ibb.co/nC2rj6n/gamis fafa.jpeg'}
+      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'https://i.ibb.co/ZBfCg4W/image1.jpeg'},
+      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'https://i.ibb.co/Sxvy7J3/image2.jpeg'},
+      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'https://i.ibb.co/vzJmWzH/image3.jpeg'},
+      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'https://i.ibb.co/mtczH6V/image4.jpeg'},
+      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'https://i.ibb.co/XZXtH7D/image5.jpeg'},
+      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'https://i.ibb.co/nC2rj6n/image6.jpeg'}
     ];
     let cart = {};
     const toRupiah = n => 'Rp ' + n.toString().replace(/\B(?=(\d{3})+(?!\d))/g, '.');
