--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       const card = document.createElement('div');
       card.className = 'card';
       card.innerHTML = `
-        <img src="${p.img}" alt="${p.name}">
+        <img src="kumpulan gamis/gamis fafa.jpeg" alt="${p.name}">
         <div class="card-body">
           <div>
             <h3>${p.name}</h3>
