--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
   <script>
     const PRODUCTS = [
-      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'https://i.ibb.co/ZBfCg4W/image1.jpeg'},
+      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'kumpulan gamis/image1.jpeg'},
       {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'https://i.ibb.co/Sxvy7J3/image2.jpeg'},
       {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'https://i.ibb.co/vzJmWzH/image3.jpeg'},
       {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'https://i.ibb.co/mtczH6V/image4.jpeg'},
