--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
 
   <script>
     const PRODUCTS = [
-      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'kumpulangamis/gamis1.jpeg'},
-      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'kumpulangamis/gamis2.jpeg'},
-      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'kumpulangamis/gamis3.jpeg'},
-      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'kumpulangamis/gamis4.jpeg'},
-      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'kumpulangamis/gamis5.jpeg'},
-      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'kumpulangamis/gamis6.jpeg'}
+      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'kumpulangamis/image1.jpeg'},
+      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'kumpulangamis/image2.jpeg'},
+      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'kumpulangamis/image3.jpeg'},
+      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'kumpulangamis/image4.jpeg'},
+      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'kumpulangamis/image5.jpeg'},
+      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'kumpulangamis/image6.jpeg'}
     ];
     let cart = {};
     const toRupiah = n => 'Rp ' + n.toString().replace(/\B(?=(\d{3})+(?!\d))/g, '.');
