--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <p>Temukan koleksi gamis modern dengan sentuhan klasik — bahan lembut, warna pastel, dan nuansa feminin berpadu dalam harmoni keanggunan muslimah.</p>
       <button class="btn secondary" onclick="scrollToProducts()">Lihat Koleksi</button>
     </div>
-    <img src="kumpulan gamis/abaya.jpeg" alt="Gamis elegan">
+    <img src="gamisfatma.jpeg" alt="Gamis elegan">
   </section>
 
   <div class="desc">
