--- a/index.html
+++ b/index.html
@@ -1,5 +1,51 @@
 <!doctype html>
-<html lang="id">
+<html lang="id"><footer>
+  <div style="max-width:800px;margin:0 auto 30px auto;text-align:justify;background:#fffaf5;padding:20px;border-radius:var(--radius);box-shadow:var(--shadow);">
+    <h3 style="text-align:center;color:var(--accent-dark);margin-bottom:10px;">Tentang E-com Gamis</h3>
+    <p>
+      <strong>E-com Gamis</strong> adalah toko fashion muslimah modern yang berkomitmen menghadirkan keanggunan dalam setiap jahitan.
+      Setiap koleksi kami dirancang dengan perpaduan antara <em>elegansi klasik</em> dan <em>sentuhan modern</em> untuk memenuhi selera
+      muslimah masa kini. Bahan yang kami gunakan berasal dari kain berkualitas tinggi — mulai dari satin lembut, linen natural,
+      hingga brokat premium yang nyaman di kulit. Dengan nuansa warna pastel dan krem, setiap gamis dan abaya dari kami memancarkan
+      kesan anggun, lembut, dan feminin yang memikat hati.
+    </p>
+    <p style="margin-top:12px;">
+      Kami percaya bahwa setiap muslimah berhak tampil menawan tanpa meninggalkan nilai kesopanan. Karena itu, setiap desain 
+      <strong>E-com Gamis</strong> diproduksi dengan penuh ketelitian dan cinta agar tidak hanya indah dipandang, tapi juga nyaman dikenakan
+      di berbagai momen — dari kegiatan sehari-hari hingga acara istimewa. 
+    </p>
+    <p style="margin-top:12px;">
+      Jadikan setiap langkah Anda lebih percaya diri dan elegan bersama <strong>E-com Gamis</strong> — keindahan yang memeluk kesederhanaan.
+    </p>
+  </div>
+
+  <p><strong>Hubungi Kami</strong></p>
+  <p>
+    <strong>Alamat Toko:</strong><br>
+    Jl. Melati Indah No. 27, Kel. Sukamaju, Kec. Cimahi Utara, Kota Cimahi, Jawa Barat 40512
+  </p>
+  <p style="margin-top:8px;">
+    <strong>WhatsApp:</strong> 
+    <a href="https://wa.me/6281234567890" target="_blank" style="color:var(--accent)">+62 812-3456-7890</a><br>
+    <strong>Instagram:</strong> 
+    <a href="https://www.instagram.com/ecomgamis.id" target="_blank" style="color:var(--accent)">@ecomgamis.id</a><br>
+    <strong>TikTok:</strong> 
+    <a href="https://www.tiktok.com/@ecomgamis.id" target="_blank" style="color:var(--accent)">@ecomgamis.id</a>
+  </p>
+
+  <p style="margin-top:16px;">
+    Email: <a href="mailto:info@ecomgamis.id" style="color:var(--accent)">info@ecomgamis.id</a>
+  </p>
+
+  <div class="social" style="margin-top:10px;">
+    <a href="https://www.instagram.com/ecomgamis.id" target="_blank">Instagram</a> |
+    <a href="https://www.facebook.com/ecomgamis.id" target="_blank">Facebook</a> |
+    <a href="https://www.tiktok.com/@ecomgamis.id" target="_blank">TikTok</a>
+  </div>
+
+  <p style="margin-top:10px;">© <span id="year"></span> E-com Gamis — Elegan dalam Setiap Gaya</p>
+</footer>
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
