--- a/index.html
+++ b/index.html
@@ -1,51 +1,5 @@
 <!doctype html>
-<html lang="id"><footer>
-  <div style="max-width:800px;margin:0 auto 30px auto;text-align:justify;background:#fffaf5;padding:20px;border-radius:var(--radius);box-shadow:var(--shadow);">
-    <h3 style="text-align:center;color:var(--accent-dark);margin-bottom:10px;">Tentang E-com Gamis</h3>
-    <p>
-      <strong>E-com Gamis</strong> adalah toko fashion muslimah modern yang berkomitmen menghadirkan keanggunan dalam setiap jahitan.
-      Setiap koleksi kami dirancang dengan perpaduan antara <em>elegansi klasik</em> dan <em>sentuhan modern</em> untuk memenuhi selera
-      muslimah masa kini. Bahan yang kami gunakan berasal dari kain berkualitas tinggi — mulai dari satin lembut, linen natural,
-      hingga brokat premium yang nyaman di kulit. Dengan nuansa warna pastel dan krem, setiap gamis dan abaya dari kami memancarkan
-      kesan anggun, lembut, dan feminin yang memikat hati.
-    </p>
-    <p style="margin-top:12px;">
-      Kami percaya bahwa setiap muslimah berhak tampil menawan tanpa meninggalkan nilai kesopanan. Karena itu, setiap desain 
-      <strong>E-com Gamis</strong> diproduksi dengan penuh ketelitian dan cinta agar tidak hanya indah dipandang, tapi juga nyaman dikenakan
-      di berbagai momen — dari kegiatan sehari-hari hingga acara istimewa. 
-    </p>
-    <p style="margin-top:12px;">
-      Jadikan setiap langkah Anda lebih percaya diri dan elegan bersama <strong>E-com Gamis</strong> — keindahan yang memeluk kesederhanaan.
-    </p>
-  </div>
-
-  <p><strong>Hubungi Kami</strong></p>
-  <p>
-    <strong>Alamat Toko:</strong><br>
-    Jl. Melati Indah No. 27, Kel. Sukamaju, Kec. Cimahi Utara, Kota Cimahi, Jawa Barat 40512
-  </p>
-  <p style="margin-top:8px;">
-    <strong>WhatsApp:</strong> 
-    <a href="https://wa.me/6281234567890" target="_blank" style="color:var(--accent)">+62 812-3456-7890</a><br>
-    <strong>Instagram:</strong> 
-    <a href="https://www.instagram.com/ecomgamis.id" target="_blank" style="color:var(--accent)">@ecomgamis.id</a><br>
-    <strong>TikTok:</strong> 
-    <a href="https://www.tiktok.com/@ecomgamis.id" target="_blank" style="color:var(--accent)">@ecomgamis.id</a>
-  </p>
-
-  <p style="margin-top:16px;">
-    Email: <a href="mailto:info@ecomgamis.id" style="color:var(--accent)">info@ecomgamis.id</a>
-  </p>
-
-  <div class="social" style="margin-top:10px;">
-    <a href="https://www.instagram.com/ecomgamis.id" target="_blank">Instagram</a> |
-    <a href="https://www.facebook.com/ecomgamis.id" target="_blank">Facebook</a> |
-    <a href="https://www.tiktok.com/@ecomgamis.id" target="_blank">TikTok</a>
-  </div>
-
-  <p style="margin-top:10px;">© <span id="year"></span> E-com Gamis — Elegan dalam Setiap Gaya</p>
-</footer>
-
+<html lang="id">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -71,6 +25,7 @@
       line-height: 1.6;
     }
 
+    /* HEADER */
     header {
       background: white;
       box-shadow: var(--shadow);
@@ -139,7 +94,7 @@
       display: flex;
       align-items: center;
       gap: 40px;
-      background: var(--cream-card) url('kumpulan-gamis/floral-bg.jpg') no-repeat right bottom / cover;
+      background: var(--cream-card) url('kumpulan gamis/floral-bg.jpg') no-repeat right bottom / cover;
       border-radius: var(--radius);
       box-shadow: var(--shadow);
       padding: 40px;
@@ -170,16 +125,16 @@
 
     .desc {
       text-align: center;
-      max-width: 900px;
+      max-width: 800px;
       margin: 40px auto;
       color: var(--muted);
       background: #fffaf2;
       border-radius: var(--radius);
-      padding: 30px;
+      padding: 20px;
       box-shadow: var(--shadow);
-      font-size: 16px;
     }
 
+    /* PRODUCT GRID */
     .container {
       max-width: 1200px;
       margin: 0 auto;
@@ -219,8 +174,8 @@
     footer {
       text-align: center;
       color: var(--muted);
-      padding: 40px 16px;
-      margin-top: 60px;
+      padding: 32px 16px;
+      margin-top: 40px;
       background: #fffaf2;
       border-top: 1px solid #e9dfd3;
     }
@@ -230,8 +185,8 @@
       text-decoration: none;
       font-weight: 600;
     }
-    .social a:hover { text-decoration: underline; }
 
+    /* RESPONSIVE */
     @media (max-width: 768px) {
       .hero { flex-direction: column; text-align: center; background-position: center; }
       .hero img { width: 80%; }
@@ -261,11 +216,11 @@
   </section>
 
   <div class="desc">
-    <p><strong>E-com Gamis</strong> hadir sebagai rumah mode muslimah yang menghadirkan keanggunan dalam setiap jahitan. Kami percaya bahwa setiap wanita berhak tampil menawan tanpa meninggalkan nilai kesopanan. Koleksi kami terinspirasi dari kelembutan warna alami, tekstur kain yang halus, serta desain yang memadukan modernitas dan tradisi Islami.  
-    <br><br>
-    Setiap <em>gamis</em> dan <em>abaya</em> kami dibuat dengan teliti menggunakan bahan premium seperti satin, linen, dan brokat pilihan. Kami menghadirkan desain yang tak hanya cantik dipandang, tetapi juga nyaman dikenakan — cocok untuk acara harian, pesta, hingga momen istimewa.  
-    <br><br>
-    Jadilah bagian dari komunitas wanita elegan bersama <strong>E-com Gamis</strong>, dan temukan pesona muslimah sejati dalam setiap langkah Anda.</p>
+    <p>
+      <strong>E-com Gamis</strong> menghadirkan koleksi eksklusif gamis dan abaya dengan desain elegan,
+      memadukan kenyamanan dan keanggunan untuk setiap kesempatan. Didesain khusus bagi muslimah modern
+      yang ingin tampil lembut, anggun, dan berkelas.
+    </p>
   </div>
 
   <div class="container">
@@ -275,25 +230,23 @@
 
   <footer>
     <p><strong>Hubungi Kami</strong></p>
-    <p>Alamat: Jl. Melati Indah No.27, Kecamatan Ciputat, Tangerang Selatan, Banten 15419</p>
     <p>Email: <a href="mailto:info@ecomgamis.id" style="color:var(--accent)">info@ecomgamis.id</a></p>
-    <p>WhatsApp: <a href="https://wa.me/6281234567890" target="_blank" style="color:var(--accent)">+62 812-3456-7890</a></p>
-    <div class="social" style="margin-top:10px;">
-      <a href="https://instagram.com/ecomgamis" target="_blank">Instagram</a> |
-      <a href="https://tiktok.com/@ecomgamis" target="_blank">TikTok</a> |
-      <a href="https://facebook.com/ecomgamis" target="_blank">Facebook</a>
+    <div class="social">
+      <a href="#">Instagram</a> |
+      <a href="#">Facebook</a> |
+      <a href="#">TikTok</a>
     </div>
-    <p style="margin-top:20px;">© <span id="year"></span> E-com Gamis — Elegan dalam Setiap Gaya Muslimah</p>
+    <p style="margin-top:10px;">© <span id="year"></span> E-com Gamis — Elegan dalam Setiap Gaya</p>
   </footer>
 
   <script>
     const PRODUCTS = [
-      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'kumpulan-gamis/gamis1.jpg'},
-      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'kumpulan-gamis/gamis2.jpg'},
-      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'kumpulan-gamis/gamis3.jpg'},
-      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'kumpulan-gamis/gamis4.jpg'},
-      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'kumpulan-gamis/gamis5.jpg'},
-      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'kumpulan-gamis/gamis6.jpg'}
+      {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'kumpulangamis/image1.jpeg'},
+      {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'kumpulangamis/image2.jpeg'},
+      {id:3,name:'Gamis Linen Ayla',price:299000,color:'Krem Natural',img:'kumpulangamis/image3.jpeg'},
+      {id:4,name:'Abaya Dubai Classic',price:610000,color:'Coklat Susu',img:'kumpulangamis/image4.jpeg'},
+      {id:5,name:'Gamis Brokat Hana',price:459000,color:'Champagne',img:'kumpulangamis/image5.jpeg'},
+      {id:6,name:'Abaya Modern Aira',price:549000,color:'Krem Gold',img:'kumpulangamis/image6.jpeg'}
     ];
     let cart = {};
     const toRupiah = n => 'Rp ' + n.toString().replace(/\B(?=(\d{3})+(?!\d))/g, '.');
@@ -338,4 +291,4 @@
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
-</html>
+</html>      
