--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 </head>
 <body>
   <header>
-    <div class="logo"><span>EG</span> E-com Gamis</div>
+    <div class="logo"><span>EG</span>Gamis Fatma</div>
     <div style="display:flex;gap:12px;align-items:center;position:relative;">
       <input id="search" class="search" placeholder="Cari gamis, warna, abaya..." />
       <div style="position:relative;">
