--- a/index.html
+++ b/index.html
@@ -134,6 +134,26 @@
       box-shadow: var(--shadow);
     }
 
+    /* VIDEO SECTION */
+    .video-section {
+      max-width: 900px;
+      margin: 50px auto;
+      text-align: center;
+      background: var(--cream-card);
+      padding: 24px;
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+    }
+    .video-section h2 {
+      color: var(--accent-dark);
+      margin-bottom: 16px;
+    }
+    .video-section video {
+      width: 100%;
+      border-radius: var(--radius);
+      box-shadow: 0 8px 24px rgba(198,154,99,0.2);
+    }
+
     /* PRODUCT GRID */
     .container {
       max-width: 1200px;
@@ -223,6 +243,15 @@
     </p>
   </div>
 
+  <!-- 🌸 VIDEO SECTION -->
+  <div class="video-section">
+    <h2>Video: Koleksi Gamis Fatma</h2>
+    <video controls autoplay muted loop>
+      <source src="video/gamis.mp4" type="video/mp4">
+      Browser Anda tidak mendukung pemutaran video.
+    </video>
+  </div>
+
   <div class="container">
     <h2 id="productTitle">Produk Pilihan</h2>
     <div id="products" class="grid"></div>
@@ -291,4 +320,4 @@
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
-</html>      
+</html>
