--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
   <div class="video-section">
     <h2>Video: Koleksi Gamis Fatma</h2>
     <video controls autoplay muted loop>
-      <source src="video/gamis.mp4" type="video/mp4">
+      <source src="https://pin.it/3ikgw8ikj" type="https://pin.it/3ikgw8ikj">
       Browser Anda tidak mendukung pemutaran video.
     </video>
   </div>
