--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
   <div class="video-section">
     <h2>Video: Koleksi Gamis Fatma</h2>
     <video controls autoplay muted loop>
-      <source src="vidiogamis.mp4" type="vidiogamis.mp4">
+      <source src="vidiogamis.mp4" type="vidiogamis/mp4">
       Browser Anda tidak mendukung pemutaran video.
     </video>
   </div>
