--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>E-com Gamis — Koleksi Muslimah Elegan</title>
-  <meta name="description" content="Toko online gamis & abaya elegan dengan nuansa bunga dan warna krem lembut.">
+  <meta name="description" content="Toko online gamis & abaya elegan dengan nuansa bunga lembut dan warna pastel.">
   <style>
     :root {
-      --cream-bg: #faf6f0;
-      --cream-card: #fffaf5;
       --accent: #c69a63;
       --accent-dark: #9c7b4a;
       --text-dark: #3b2f2f;
@@ -20,14 +18,15 @@
     * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', sans-serif; }
 
     body {
-      background: var(--cream-bg);
+      background: url('bg-bunga-lembut.jpg') no-repeat center top / cover fixed;
       color: var(--text-dark);
       line-height: 1.6;
     }
 
     /* HEADER */
     header {
-      background: white;
+      background: rgba(255,255,255,0.9);
+      backdrop-filter: blur(8px);
       box-shadow: var(--shadow);
       padding: 14px 24px;
       display: flex;
@@ -36,6 +35,7 @@
       position: sticky;
       top: 0;
       z-index: 50;
+      border-radius: 0 0 14px 14px;
     }
     .logo {
       display: flex;
@@ -94,22 +94,13 @@
       display: flex;
       align-items: center;
       gap: 40px;
-      background: var(--cream-card) url('kumpulan gamis/floral-bg.jpg') no-repeat right bottom / cover;
+      background: rgba(255,255,255,0.9);
       border-radius: var(--radius);
       box-shadow: var(--shadow);
       padding: 40px;
       position: relative;
       overflow: hidden;
     }
-    .hero::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: rgba(255, 250, 245, 0.6);
-      border-radius: var(--radius);
-    }
-    .hero > * { position: relative; z-index: 1; }
-
     .hero h1 {
       font-size: 34px;
       color: var(--accent-dark);
@@ -128,30 +119,10 @@
       max-width: 800px;
       margin: 40px auto;
       color: var(--muted);
-      background: #fffaf2;
+      background: rgba(255,255,255,0.9);
       border-radius: var(--radius);
       padding: 20px;
       box-shadow: var(--shadow);
-    }
-
-    /* VIDEO SECTION */
-    .video-section {
-      max-width: 900px;
-      margin: 50px auto;
-      text-align: center;
-      background: var(--cream-card);
-      padding: 24px;
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-    }
-    .video-section h2 {
-      color: var(--accent-dark);
-      margin-bottom: 16px;
-    }
-    .video-section video {
-      width: 100%;
-      border-radius: var(--radius);
-      box-shadow: 0 8px 24px rgba(198,154,99,0.2);
     }
 
     /* PRODUCT GRID */
@@ -159,6 +130,9 @@
       max-width: 1200px;
       margin: 0 auto;
       padding: 20px;
+      background: rgba(255,255,255,0.9);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
     }
     h2 { font-size: 24px; color: var(--accent-dark); margin-bottom: 16px; text-align: center; }
 
@@ -196,8 +170,9 @@
       color: var(--muted);
       padding: 32px 16px;
       margin-top: 40px;
-      background: #fffaf2;
+      background: rgba(255,255,255,0.9);
       border-top: 1px solid #e9dfd3;
+      border-radius: 14px 14px 0 0;
     }
     .social a {
       margin: 0 8px;
@@ -241,15 +216,6 @@
       memadukan kenyamanan dan keanggunan untuk setiap kesempatan. Didesain khusus bagi muslimah modern
       yang ingin tampil lembut, anggun, dan berkelas.
     </p>
-  </div>
-
-  <!-- 🌸 VIDEO SECTION -->
-  <div class="video-section">
-    <h2>Video: Koleksi Gamis Fatma</h2>
-    <video controls autoplay muted loop>
-      <source src="vidiogamis.mp4" type="vidiogamis/mp4">
-      Browser Anda tidak mendukung pemutaran video.
-    </video>
   </div>
 
   <div class="container">
