--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', sans-serif; }
 
     body {
-      background: url('bg-bunga-lembut.jpg') no-repeat center top / cover fixed;
+      background: url('bunga.jpeg') no-repeat center top / cover fixed;
       color: var(--text-dark);
       line-height: 1.6;
     }
